unpackaged/main/default/objects/Pagare_Preventa__c/Pagare_Preventa__c.object-meta.xml
<CustomObject>
    <label>Pagaré Preventa</label>
    <nameField>
        <displayFormat>{YY}{MM}-{00000}</displayFormat>
        <label>Número de Pagaré Preventa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagarés Preventa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>