unpackaged/main/default/objects/Pagare_Preventa__c/fields/Creado_Manualmente__c.field-meta.xml
<CustomField>
    <fullName>Creado_Manualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creado Manualmente</label>
    <type>Checkbox</type>
</CustomField>