unpackaged/main/default/objects/Pagare_Preventa__c/fields/Eliminado_Manualmente__c.field-meta.xml
<CustomField>
    <fullName>Eliminado_Manualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eliminado Manualmente</label>
    <type>Checkbox</type>
</CustomField>