unpackaged/main/default/objects/Pagare_Preventa__c/fields/Estatus_Pagare__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Pagare__c</fullName>
    <label>Estatus Pagaré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emitido</fullName>
            </value>
            <value>
                <fullName>Pagado</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>