unpackaged/main/default/objects/Pagare_Preventa__c/fields/Fecha_Pagare__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Pagare__c</fullName>
    <formula>CreatedDate</formula>
    <label>Fecha Pagaré</label>
    <type>Date</type>
</CustomField>