unpackaged/main/default/objects/Pagare_Preventa__c/fields/Modificado_Manualmente__c.field-meta.xml
<CustomField>
    <fullName>Modificado_Manualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificado Manualmente</label>
    <type>Checkbox</type>
</CustomField>