unpackaged/main/default/objects/Pagare_Preventa__c/fields/Modificado_Manualmente_Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Modificado_Manualmente_Fecha_Vencimiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificado Manualmente Fecha Vencimiento</label>
    <type>Checkbox</type>
</CustomField>