unpackaged/main/default/objects/Pagare_Preventa__c/fields/Modificado_Manualmente_Importe__c.field-meta.xml
<CustomField>
    <fullName>Modificado_Manualmente_Importe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificado Manualmente Importe</label>
    <type>Checkbox</type>
</CustomField>