unpackaged/main/default/objects/Pagare_Preventa__c/fields/No_Pagare__c.field-meta.xml
<CustomField>
    <fullName>No_Pagare__c</fullName>
    <label>Consecutivo Pagaré</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>