unpackaged/main/default/objects/Pagare_Preventa__c/fields/Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Plan_de_Venta__c</fullName>
    <label>Plan de Venta</label>
    <referenceTo>Plan_de_Venta__c</referenceTo>
    <relationshipLabel>Pagarés Preventa</relationshipLabel>
    <relationshipName>Pagares_Preventa</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>