unpackaged/main/default/objects/Pagare_Preventa__c/fields/Se_puede_Borrar_o_Editar__c.field-meta.xml
<CustomField>
    <fullName>Se_puede_Borrar_o_Editar__c</fullName>
    <formula>IF(TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) = &quot;En Progreso&quot; || 
			TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) = &quot;Rechazado&quot;,
			True,
			False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Se puede Borrar o Editar?</label>
    <type>Checkbox</type>
</CustomField>