unpackaged/main/default/objects/Pagare_Preventa__c/fields/Tipo_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagaré Preventa</fullName>
                <default>true</default>
                <label>Pagaré Preventa</label>
            </value>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>Nota de Crédito</fullName>
                <isActive>false</isActive>
                <label>Nota de Crédito</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>