unpackaged/main/default/objects/Pagare_Preventa__c/fields/Tipo_Pagare__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pagare__c</fullName>
    <label>Tipo de Pagaré</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pagaré Preventa</fullName>
                <default>true</default>
                <label>Pagaré Preventa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>