unpackaged/main/default/objects/Pagare_Preventa__c/validationRules/Fecha_de_vencimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_de_vencimiento</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISCHANGED(Fecha_de_Vencimiento__c) &amp;&amp;
(
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Reservado&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Exigible&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Entregado&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Escriturado&#39;
),
ISCHANGED(Fecha_de_Vencimiento__c) &amp;&amp;
(
TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) = &#39;Por Aprobar&#39; ||
TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) = &#39;Aprobado&#39;
)
)</errorConditionFormula>
    <errorMessage>No se puede modificar el Fecha de vencimiento si el estatus del Proceso de venta es igual a Formalizado, Exigible, Entregado, Escriturado ó el estatus del Plan de Venta es igual a Por Aprobar, Aprobado.</errorMessage>
</ValidationRule>