unpackaged/main/default/objects/Pagare_Preventa__c/validationRules/Importe.validationRule-meta.xml
<ValidationRule>
    <fullName>Importe</fullName>
    <active>false</active>
    <errorConditionFormula>OR(ISCHANGED(Importe__c) &amp;&amp;
(
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Formalizado&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Validación&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Entregado&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Escriturado&#39; ||
	Plan_de_Venta__r.Estatus_Proceso_de_Venta__c  = &#39;Cancelado&#39;
),
ISCHANGED(Importe__c) &amp;&amp;
(
TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) = &#39;Por Aprobar&#39; ||
TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) = &#39;Aprobado&#39;
)
)</errorConditionFormula>
    <errorMessage>No se puede modificar el Importe si el estatus del Proceso de venta es igual a Formalizado, Validación, Entregado, Escriturado, Cancelado ó el estatus del Plan de Venta es igual a Por Aprobar, Aprobado.</errorMessage>
</ValidationRule>