unpackaged/main/default/objects/Pagare_Preventa__c/validationRules/Valida_Fecha_Vencimiento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Fecha_Vencimiento</fullName>
    <active>true</active>
    <errorConditionFormula>IF((Se_puede_Borrar_o_Editar__c  ||  TEXT(Plan_de_Venta__r.Estatus_Plan_de_venta__c) =&quot;Cancelado&quot; || TEXT(Estatus_Pagare__c) = &quot;Cancelado&quot; ), 
			 False,
			 Fecha_de_Vencimiento__c &lt; TODAY()
		)</errorConditionFormula>
    <errorDisplayField>Fecha_de_Vencimiento__c</errorDisplayField>
    <errorMessage>La Fecha de Vencimiento debe igual ó mayor a la fecha actual.</errorMessage>
</ValidationRule>